--- a/languages/en.json
+++ b/languages/en.json
@@ -81,6 +81,7 @@
             "title":        "GLOBAL Roll Data",
             "blind_rolls":  "There Are {ui_rollcount} Blind rolls between all players",
             "blind_roll_btn": "Push Players Blind Rolls to Graph",
+            "clear_roll_data_btn": "Clear All Tracked Rolls",
             
             "player_roll_count": "<b>{ui_player}</b> with <b>{ui_lowRollCnt}</b> Rolls",
             
