Add buttons to save data

--- a/languages/en.json
+++ b/languages/en.json
@@ -119,7 +119,9 @@
             "player_name":  "Roll Data",
             "streak":       "Streak Data (Sequential incrementing rolls):",
             "no_streak":    "No Streak was made",
-            "streak_blind": "Streak Includes a Blind Roll, Data Hidden"
+            "streak_blind": "Streak Includes a Blind Roll, Data Hidden",
+            "load_data_btn": "Save Player Data",
+            "save_data_btn": "Load Player Data"
         },
         "roll_chat_form":{
 
