Remove Automated DB stuff

--- a/languages/en.json
+++ b/languages/en.json
@@ -121,8 +121,8 @@
             "streak":       "Streak Data (Sequential incrementing rolls):",
             "no_streak":    "No Streak was made",
             "streak_blind": "Streak Includes a Blind Roll, Data Hidden",
-            "load_data_btn": "Save Your Player Data",
-            "save_data_btn": "Load All Player Data"
+            "load_data_btn": "Load ALL Player Data",
+            "save_data_btn": "Save YOUR Player Data"
         },
         "roll_chat_form":{
 
