--- a/languages/en.json
+++ b/languages/en.json
@@ -123,7 +123,7 @@
             "streak_blind": "Streak Includes a Blind Roll, Data Hidden",
             "load_data_btn": "Load ALL Player Data",
             "save_data_btn": "Save YOUR Player Data",
-            "db_interact":  "Data Base Interaction"
+            "db_interact":  "Database Interaction"
         },
         "roll_chat_form":{
 
