--- a/languages/en.json
+++ b/languages/en.json
@@ -133,7 +133,7 @@
             "clear_all_local_data_btn":"Clear ALL locally stored data",
             "clear_my_local_data_btn":"Clear YOUR locally stored data",
             "clear_my_db_info":"Clear YOUR DB values",
-            "clear_your_both":"Clear Your Local And DB Values"
+            "clear_your_both":"Clear YOUR Local And DB Values"
         },
         "roll_chat_form":{
 
@@ -184,7 +184,7 @@
         "global_dialogs":{
             "clear_all_local_data":{
                 "title":"Confirm Clear",
-                "context":"Are you sure wou would like to clear aLL roll data? This will clear all locally stored data on EVERY client. DB Values are still saved."
+                "context":"Are you sure wou would like to clear all roll data? This will clear all locally stored data on EVERY client. DB Values are still saved."
             },
             "clear_all_db_data":{
                 "title":"Confirm Clear",
